--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "oak/framework",
+  "name": "marcosheleno92/oak",
   "version": "0.0.1",
   "authors": [{
     "name": "Marcos Heleno Vieira de Oliveira",
